fix: hide menu filter scrollbar and add netlify redirects

--- a/src/index.scss
+++ b/src/index.scss
@@ -82,6 +82,15 @@
   .text-subtle {
     color: var(--color-subtle);
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 /* Micro-Interactions */
